--- a/front/index.html
+++ b/front/index.html
@@ -22,6 +22,7 @@
         }
     </style>
 </head>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js"></script>
 <script src="https://pixijs.download/v5.3.6/pixi.min.js"></script>
 <body>
     <script src="./index.js"></script>
