--- a/front/index.html
+++ b/front/index.html
@@ -113,12 +113,18 @@
             <!-- <ul id="rooms"><li>sala1</li><li>sala2</li></ul> -->
         </div>
     </div>
-    <canvas id="view"></canvas>
+    <canvas id="view" width="256" height="256"></canvas>
     <div id="chat">
         <ul id="messages" tabindex="1"></ul>
         <input class="inputText" id="mytext" placeholder="escreve algo ae"/>
     </div>
-    <script src="https://pixijs.download/v5.3.6/pixi.min.js"></script>
+
+    <div style="display:none;">
+    <img id="source"
+        src="./sprites/obra.png">
+    </div>
+
+    <!-- <script src="https://pixijs.download/v5.3.6/pixi.min.js"></script> -->
     <script src="./index.js"></script> 
 </body>
 </html>
