uso de cartas no naipe

--- a/front/index.html
+++ b/front/index.html
@@ -87,7 +87,7 @@
         li {
             margin-top: 5px;
             font-size: small;
-            word-break: break-all;
+            word-break: break-word;
         }
 
         .inputText {
