--- a/front/index.html
+++ b/front/index.html
@@ -95,9 +95,12 @@
         }
         
     </style>
-</head>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js"></script>
+<link rel="icon" 
+      type="image/png" 
+      href="/favicon.png">
+</head>
 <body>
     <div id="esquerda">
         <div id="name">
